gcp/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greetings
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
