gcp/kustomize/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: greetings
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: greetings
              servicePort: 8080
